--- a/lib/subdir.am
+++ b/lib/subdir.am
@@ -290,6 +290,7 @@ pkginclude_HEADERS += \
 	lib/ringbuf.h \
 	lib/routemap.h \
 	lib/route_opaque.h \
+	lib/sanitizer.h \
 	lib/sbuf.h \
 	lib/seqlock.h \
 	lib/sha256.h \
