--- a/lib/subdir.am
+++ b/lib/subdir.am
@@ -103,6 +103,7 @@ lib_libfrr_la_SOURCES = \
 	lib/routemap.c \
 	lib/routemap_cli.c \
 	lib/routemap_northbound.c \
+	lib/sanitizer.c \
 	lib/sbuf.c \
 	lib/seqlock.c \
 	lib/sha256.c \
