tests: EVPN add dynamic nbr with ext router
Add a test to have dynamic neighbor in tenant vrf
between leaf-21 and a new node ext-21.

Signed-off-by: Chirag Shah <chirag@nvidia.com>

--- a/tests/topotests/bgp_evpn_three_tier_clos_topo1/ipv4/leaf-21/frr.conf
+++ b/tests/topotests/bgp_evpn_three_tier_clos_topo1/ipv4/leaf-21/frr.conf
@@ -46,4 +46,22 @@ router bgp 651004
   neighbor 10.254.0.126 activate
  exit-address-family
 !
+router bgp 651004 vrf RED
+ bgp router-id 10.10.10.2
+ neighbor test peer-group
+ neighbor test remote-as 651006
+ neighbor test update-source 10.1.10.3
+ neighbor test advertisement-interval 0
+ neighbor test timers 3 9
+ neighbor test timers connect 10
+ neighbor 10.1.10.2 remote-as 651006
+ neighbor 10.1.10.2 update-source 10.1.10.3
+ !
+ address-family ipv4 unicast
+  redistribute connected
+  maximum-paths 64
+  maximum-paths ibgp 64
+ exit-address-family
+exit
+!
 end
