lib: lock-free hash table
<work in progress>

Signed-off-by: David 'equinox' Lamparter <equinox@opensourcerouting.org>

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -26,6 +26,7 @@ frr_northbound*
 /lib/cxxcompat
 /lib/fuzz_zlog
 /lib/test_assert
+/lib/test_atomhash
 /lib/test_atomlist
 /lib/test_buffer
 /lib/test_checksum
