--- a/lib/subdir.am
+++ b/lib/subdir.am
@@ -13,6 +13,7 @@ lib_libfrr_la_SOURCES = \
 	lib/affinitymap_northbound.c \
 	lib/agg_table.c \
 	lib/atomlist.c \
+	lib/atomhash.c \
 	lib/asn.c \
 	lib/base64.c \
 	lib/bfd.c \
@@ -201,6 +202,7 @@ nobase_pkginclude_HEADERS += \
 	lib/affinitymap.h \
 	lib/agg_table.h \
 	lib/asn.h \
+	lib/atomhash.h \
 	lib/atomlist.h \
 	lib/atomptr.h \
 	lib/base64.h \
