--- a/redhat/frr.spec.in
+++ b/redhat/frr.spec.in
@@ -849,7 +849,10 @@ sed -i 's/ -M rpki//' %{_sysconfdir}/frr/daemons
 
 %changelog
 
-* Mon Jan 05 2026 Jafar Al-Gharaibeh <jafar@atcorp.com> - %{version}
+* Tue Feb 17 2026 Jafar Al-Gharaibeh <jafar@atcorp.com> - %{version}
+
+* Tue Feb 17 2026 Jafar Al-Gharaibeh <jafar@atcorp.com> - 10.5.2
+- New upstream release FRR 10.5.2
 
 * Mon Jan 05 2026 Donatas Abraitis <donatas@opensourcerouting.org> 10.5.1
 - bgpd:
